--- a/themes/bootstrap/admin/templates/tag/parts/tag-list.twig
+++ b/themes/bootstrap/admin/templates/tag/parts/tag-list.twig
@@ -13,10 +13,14 @@
             <tr>
                 <td>
                     <a href="{{ adminTagUrl(tag) }}">
-                        <img src="{{ tagImageUrl(tag) }}"
-                             width="50"
-                             height="50"
-                             style="width: 50px; height: 50px;">
+                        {% if tag.defaultImage is null %}
+                            <div style="width: 50px; height: 50px;"></div>
+                        {% else %}
+                            <img src="{{ tagImageUrl(tag) }}"
+                                 width="50"
+                                 height="50"
+                                 style="width: 50px; height: 50px;">
+                        {% endif %}
                     </a>
                 </td>
                 <td>
