--- a/themes/bootstrap/store/templates/helper/tag-grid.twig
+++ b/themes/bootstrap/store/templates/helper/tag-grid.twig
@@ -2,10 +2,14 @@
     <div class="tag-container col-md-3 col-sm-4 col-xs-6">
         <div class="center">
             <a href="{{ tagUrl(tag) }}">
-                <img src="{{ tagImageUrl(tag) }}"
-                     width="160"
-                     height="160"
-                     style="width: 160px; height: 160px">
+                {% if tag.defaultImage is null %}
+                    <div style="width: 160px; height: 160px;"></div>
+                {% else %}
+                    <img src="{{ tagImageUrl(tag) }}"
+                         width="160"
+                         height="160"
+                         style="width: 160px; height: 160px">
+                {% endif %}
             </a>
         </div>
         <a href="{{ tagUrl(tag) }}">
