--- a/themes/bootstrap/store/templates/tag/show.twig
+++ b/themes/bootstrap/store/templates/tag/show.twig
@@ -10,11 +10,15 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
-                <img src="{{ tagImageUrl(tag) }}"
-                    width="100"
-                    height="100"
-                    style="'width: 100px; height: 100px; margin: 18px"
-                    class="pull-left">
+                {% if tag.defaultImage is null %}
+                    <div style="width: 100px; height: 100px;"></div>
+                {% else %}
+                    <img src="{{ tagImageUrl(tag) }}"
+                        width="100"
+                        height="100"
+                        style="'width: 100px; height: 100px; margin: 18px"
+                        class="pull-left">
+                {% endif %}
             </div>
             <div class="col-sm-9">
                 <dl>
